--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,7 +10,7 @@ build: off
 
 install:
   - java -jar ./artifacts/app-order.jar &
-  - chmod +x ./driver/mac/chromedriver
+  - chmod +x gradlew
 
 build_script:
   - ./gradlew test --info
